--- a/package.json
+++ b/package.json
@@ -14,12 +14,19 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@langchain/openai": "^0.0.13",
     "@radix-ui/react-slot": "^1.0.2",
+    "@supabase/supabase-js": "^2.39.3",
+    "ai": "^2.2.31",
+    "axios": "^1.6.7",
+    "chromadb": "^1.8.1",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
+    "langchain": "^0.1.9",
     "lucide-react": "0.105.0-alpha.4",
     "next": "^13.4.8",
     "next-themes": "^0.2.1",
+    "openai": "^4.26.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.31.3",
