--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "chromadb": "^1.8.1",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
+    "common-tags": "^1.8.2",
+    "gpt3-tokenizer": "^1.1.5",
     "langchain": "^0.1.9",
     "lucide-react": "0.105.0-alpha.4",
     "next": "^13.4.8",
@@ -35,6 +37,7 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
+    "@types/common-tags": "^1.8.4",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
