--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@langchain/openai": "^0.0.13",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.39.3",
+    "@tanstack/react-query": "^5.17.19",
+    "@uiw/react-md-editor": "^4.0.3",
     "ai": "^2.2.31",
     "axios": "^1.6.7",
     "chromadb": "^1.8.1",
@@ -31,6 +33,7 @@
     "openai": "^4.26.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rehype-sanitize": "^6.0.0",
     "sharp": "^0.31.3",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6"
