--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@langchain/openai": "^0.0.13",
+    "@mdxeditor/editor": "^2.3.8",
+    "@medusajs/icons": "^1.2.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-query": "^5.17.19",
@@ -33,8 +35,12 @@
     "openai": "^4.26.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "reading-time": "^1.5.0",
     "rehype-sanitize": "^6.0.0",
+    "rich-markdown-editor": "^11.21.3",
     "sharp": "^0.31.3",
+    "sonner": "^1.3.1",
+    "styled-components": "^6.1.8",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6"
   },
