--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@langchain/openai": "^0.0.13",
     "@mdxeditor/editor": "^2.3.8",
     "@medusajs/icons": "^1.2.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-query": "^5.17.19",
@@ -33,16 +34,22 @@
     "next": "^13.4.8",
     "next-themes": "^0.2.1",
     "openai": "^4.26.0",
+    "prism-react-renderer": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.3",
+    "react-markdown": "^9.0.1",
+    "react-textarea-autosize": "^8.5.3",
     "reading-time": "^1.5.0",
     "rehype-sanitize": "^6.0.0",
+    "remark-math": "^6.0.0",
     "rich-markdown-editor": "^11.21.3",
     "sharp": "^0.31.3",
     "sonner": "^1.3.1",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^1.13.2",
-    "tailwindcss-animate": "^1.0.6"
+    "tailwindcss-animate": "^1.0.6",
+    "wysiwyg-markdown-react": "^0.1.4"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
