--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-markdown": "^9.0.1",
     "react-textarea-autosize": "^8.5.3",
     "reading-time": "^1.5.0",
+    "rehype-highlight": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-math": "^6.0.0",
     "rich-markdown-editor": "^11.21.3",
