--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@langchain/openai": "^0.0.13",
     "@mdxeditor/editor": "^2.3.8",
     "@medusajs/icons": "^1.2.0",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.39.3",
@@ -33,6 +34,7 @@
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "common-tags": "^1.8.2",
+    "date-fns": "^3.3.1",
     "gpt3-tokenizer": "^1.1.5",
     "langchain": "^0.1.9",
     "lucide-react": "0.105.0-alpha.4",
@@ -41,6 +43,7 @@
     "openai": "^4.26.0",
     "prism-react-renderer": "^2.3.1",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.3",
     "react-markdown": "^9.0.1",
