--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-query": "^5.17.19",
     "@uiw/react-md-editor": "^4.0.3",
+    "@web-std/file": "^3.0.3",
     "ai": "^2.2.31",
     "axios": "^1.6.7",
     "chromadb": "^1.8.1",
@@ -41,6 +42,8 @@
     "next": "^13.4.8",
     "next-themes": "^0.2.1",
     "openai": "^4.26.0",
+    "pdf-parse": "^1.1.1",
+    "pdf2json": "^3.0.5",
     "prism-react-renderer": "^2.3.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
@@ -58,12 +61,14 @@
     "styled-components": "^6.1.8",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
+    "uuid": "^9.0.1",
     "wysiwyg-markdown-react": "^0.1.4"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
     "@types/common-tags": "^1.8.4",
     "@types/node": "^17.0.45",
+    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/parser": "^5.61.0",
