--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "common-tags": "^1.8.2",
     "date-fns": "^3.3.1",
     "gpt3-tokenizer": "^1.1.5",
+    "katex": "^0.16.9",
     "langchain": "^0.1.9",
     "lucide-react": "0.105.0-alpha.4",
     "next": "^13.4.8",
@@ -54,6 +55,8 @@
     "react-textarea-autosize": "^8.5.3",
     "reading-time": "^1.5.0",
     "rehype-highlight": "^7.0.0",
+    "rehype-katex": "^7.0.0",
+    "rehype-rewrite": "^4.0.2",
     "rehype-sanitize": "^6.0.0",
     "remark-math": "^6.0.0",
     "rich-markdown-editor": "^11.21.3",
